--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,14 +1,23 @@
 .footer {
   background-color: #1a365d;
-  padding: 44px 0;
+  padding: 60px 0 20px;
+  position: relative;
 
   &__main {
     display: flex;
+    justify-content: center;
     margin: 0 0 64px 0;
+
+    @include vp-767 {
+      display: block;
+        margin: 0 40px 0 0;
+      }
   }
 
   &__logo-link {
-    margin: 0 136px 0 0;
+    position: absolute;
+    top: 3%;
+    left: 30%;
 
     @media (max-width: 1150px) {
       margin: 0 50px 0 0;
@@ -23,6 +32,9 @@
     display: flex;
     gap: 80px;
     margin: 0 0 40px 0;
+    @include vp-767 {
+       gap: 20px;
+      }
   }
 
   &__name {
@@ -45,6 +57,10 @@
       margin: 0 0 12px 0;
     }
   }
+
+    &__social{
+      display: flex;
+    }
 
   &__social-list {
     display: flex;
@@ -84,10 +100,15 @@
   }
 
   &__info {
-    margin: 0 0 0 auto;
+    // margin: 0 0 0 auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    @include vp-767 {
+        display: block;
+        margin: 20px 10px 0 0;
+      }
   }
 
 
