--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -17,10 +17,13 @@
   &__logo-link {
     position: absolute;
     top: 3%;
-    left: 30%;
+    left: 45%;
 
     @media (max-width: 1150px) {
       margin: 0 50px 0 0;
+    }
+    @include vp-767{
+      left: 30%;
     }
   }
 
