--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -1,7 +1,8 @@
 .description {
   position: relative;
   border-top: 1px solid $color-dark-gray;
-  background: #1a365d;
+  // background: #1a365d;
+  background: #D8DEE5;
   &__lamp {
     position: absolute;
     top: 0;
