--- a/css/style.css
+++ b/css/style.css
@@ -2072,7 +2072,10 @@ button {
 
 .description {
   position: relative;
-  background: #1a365d;
+  /* background: #1a365d;
+   */
+  background: rgba(220, 222, 223, 1);
+  background: #d8dee5;
   justify-content: center;
 }
 .description-about {
@@ -2087,7 +2090,12 @@ button {
   flex-wrap: wrap;
   align-items: center;
   gap: 40px;
-  background: #1a365d;
+  /* background: #1a365d; */
+  /* background: #d8dee5; */
+  /* background: rgba(216, 222, 229, 0.49); */
+  /* background: #d7d8da; */
+  background: rgba(220, 222, 223, 1);
+
   justify-content: center;
   padding-left: 16px;
   padding-right: 16px;
